<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">毕业论文指导系统</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_login">登  录</string>
    <string name="button_teacher">教师入口</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="editText_userName">请输入学号/工号</string>
    <string name="editText_password">请输入密码</string>
    <string name="button_view_select">查看课题</string>
    <string name="button_view_result">查看选题结果</string>
    <string name="radioButton_thesis">选题</string>
    <string name="radioButton_chat">信息</string>
    <string name="radioButton_group">小组</string>
    <string name="radioButton_me">我</string>
    <string name="button_leave_message">留言</string>
    <string name="button_submit">提  交</string>
    <string name="button_select">选  题</string>

    <string-array name="choice">
        <item>选题</item>
        <item>第一志愿</item>
        <item>第二志愿</item>
        <item>第三志愿</item>
    </string-array>

    <string name="first_choice">第一志愿</string>
    <string name="second_choice">第二志愿</string>
    <string name="third_choice">第三志愿</string>
    <string name="teacher_entry">教师入口</string>
    <string name="title_activity_teacher_login">TeacherLoginActivity</string>
    <string name="button_teacher_login">教师登录</string>
    <string name="back">返回</string>
    <string name="title_activity_teacher_main">TeacherMainActivity</string>
    <string name="title_activity_select_student">SelectStudentActivity</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="button_logout">注销</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="message_detail">消息详情</string>
    <string name="refresh">刷新</string>
    <string name="textView_selected">已选课题：</string>
    <string name="button_reSelect">更改选题</string>
    <string name="button_myList">已选课题</string>
    <string name="title_activity_selected_thesis">已选课题</string>
    <string name="title_activity_edit_thesis">编辑课题</string>
    <string name="textView_thesisName">论文题目</string>
    <string name="textView_count">人数限制</string>
    <string name="textView_detail">详细信息</string>
    <string name="delete">删除</string>
    <string name="edit">修改</string>
    <string name="title_activity_edit_notification">EditNotificationActivity</string>
    <string name="edit_notification">编辑通知</string>
    <string name="notification_title">通知标题</string>
    <string name="notification_content">通知正文</string>
    <string name="button_chat">组内交流</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="upload">上传文件</string>
    <string name="button_download">下载文件</string>
    <string name="title_activity_download">DownloadActivity</string>

</resources>