<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="#00FFFFFF" />

    <Button
        android:id="@+id/button_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_button_selector"
        android:text="@string/button_chat"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="#00FFFFFF" />

    <Button
        android:id="@+id/button_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_button_selector"
        android:text="@string/button_download"
        android:textSize="18dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="#00FFFFFF" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_button_selector"
        android:text="@string/upload"
        android:textSize="18dp" />

</LinearLayout>