<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/qq_dimen_330px"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_first"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:background="@drawable/common_button_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/first_choice"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:background="@drawable/common_button_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/second_choice"
            android:textColor="@android:color/black"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_third"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qq_dimen_80px"
            android:background="@drawable/common_button_selector"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/third_choice"
            android:textColor="@android:color/black"
            android:textSize="15dp" />
    </LinearLayout>

</RelativeLayout>