<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/qq_dimen_96px"
        android:background="#2E3132" >

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_ab_back_holo_dark_am" />

        <ImageView
            android:id="@+id/img"
            android:layout_width="@dimen/qq_dimen_80px"
            android:layout_height="@dimen/qq_dimen_80px"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/logo" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/qq_dimen_8px"
            android:layout_marginStart="@dimen/qq_dimen_8px"
            android:layout_toEndOf="@+id/img"
            android:layout_toRightOf="@+id/img"
            android:text="@string/title_activity_edit_thesis"
            android:textColor="@android:color/white"
            android:textSize="@dimen/qq_dimen_30px" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginBottom="40dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/textView_thesisName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_thesisName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_selector"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/textView_count"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_selector"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/textView_detail"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_selector"
                android:inputType="textMultiLine" />

            <ImageButton
                android:id="@+id/button_send"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/common_button_selector"
                android:src="@drawable/ic_menu_send" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>